--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Aim Training</title>
   </head>
   <body>
-    <div class="screen up">
+    <div class="screen">
       <h1>Aim Training</h1>
       <a href="#" class="start" id="start">Game start</a>
     </div>
 
-    <div class="screen up">
+    <div class="screen">
       <h1>Select time</h1>
       <ul class="time-list" id="time-list">
         <li>
